# piee

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_ngrok.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: chat.py  embeddings.py  models_api.py  ollama_api.py  schemas.py
app/audit/: middleware.py  models.py  router.py  service.py
app/auth/: models.py  router.py  service.py
app/billing/: models.py  router.py  service.py
app/flags/: models.py  service.py
app/providers/: anthropic_provider.py  base.py  local_provider.py  ollama_provider.py  openai_provider.py  registry.py
app/router/: engine.py  models.py  service.py
dashboard/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: theme-toggle.tsx
dashboard/src/lib/: api.ts  auth-context.tsx
piee-sdk-python/: README.md  pyproject.toml
piee-sdk-python/piee/: __init__.py  client.py  exceptions.py  types.py
piee-sdk-python/tests/: test_client.py
prisma/: schema.prisma
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  types.ts
test-sdk-python/: README.md  test_piee.py
test-sdk-typescript/: README.md  package.json  test.ts  tsconfig.json
tests/: conftest.py  test_health.py
(+3 files in other folders)
